--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,5 @@
 [general]
-; data_file =  ../data/202501011400.dat
-data_file =  ../data/2_4s.dat
-; data_file =  ../data/202004080945.dat
+data_file =  CAIDA.dat
 
 jitter_factor = 4.0 ;
  min_absolute_jitter_thres = 10000 ;
